# bitvector

./: .editorconfig  .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  BitVector.html  BitVector.py  CODE_OF_CONDUCT.md  ChangeLog  INSTALL  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README  README.md  SECURITY.md  mkdocs.yml  mmap_plan.md  mmap_plan10.md  mmap_plan11.md  mmap_plan2.md  mmap_plan3.md  mmap_plan4.md  mmap_plan5.md  mmap_plan6.md  mmap_plan7.md  mmap_plan8.md  mmap_plan9.md  mmap_plan_final.md  patch_count_bits_sparse.py  patch_tests.py  patch_unpack.py  patch_unpack2.py  pyproject.toml  setup.py  test_add.py  test_count.py  test_fileio.py  test_inherit.py  (+11 more)
.agents/: AGENTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: lychee.yml  osv-scanner.yml  release.yml  test.yml  zizmor.yml
BitVector/: BitVector.py  BitVectorNumPy.py  __init__.py  mmap_bitvector.py  numpy_impl.py  protocol.py
Examples/: BitVector.ipynb  BitVectorDemo.py  README
TestBitVector/: Test.py  TestBooleanLogic.py  TestCircularShifts.py  TestComparisonOps.py  TestConstructors.py  TestPermutations.py  test_boolean_logic.py  test_circular_shifts.py  testinput2.txt  testinput6.txt  testinput7.txt
docs/: api.md  development.md  index.md
examples/: BitVectorDemo.py  README  README.md  demo.py  testinput1.txt
scripts/: fuzz.sh
test/: TestBooleanLogic.py  TestCircularShifts.py  TestComparisonOps.py  TestConstructors.py  TestPermutations.py  bitvector_test.py
tests/: test_benchmarks.py  test_boolean_logic.py  test_circular_shifts.py  test_comparison_ops.py  test_constructors.py  test_dunder.py  test_get_set.py  test_init.py  test_mmap.py  test_mmap_bitvector.py  test_numpy.py  test_numpy_benchmarks.py  test_numpy_impl.py  test_operations.py  test_permutations.py  test_properties.py  test_protocol.py  test_stream.py  test_string.py  testinput3.txt  testinput5.txt
